--- a/public/mosaic_preview_v3.html
+++ b/public/mosaic_preview_v3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +28,7 @@
     .page {
       width: 100%;
       max-width: 1220px;
-      padding: 28px 24px 20px;
+      padding: 28px 24px 40px;
     }
 
     /* TOP NAV */
@@ -47,6 +46,19 @@
       cursor: default;
     }
 
+    .top-nav .nav-link {
+      text-decoration: none;
+      color: #2b2629;
+      letter-spacing: 0.16em;
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      transition: opacity 0.25s ease;
+    }
+
+    .top-nav .nav-link:hover {
+      opacity: 0.6;
+    }
+
     /* MAIN FRAME */
     .frame {
       background: #fdf8fb;
@@ -60,6 +72,9 @@
     }
 
     @media (max-width: 980px) {
+      body {
+        align-items: flex-start;
+      }
       .frame {
         grid-template-columns: 1fr;
         padding: 24px 20px 22px;
@@ -273,6 +288,35 @@
       text-decoration: underline;
     }
 
+    /* INFO SECTIONS */
+    .info-section {
+      margin: 60px auto 32px auto;
+      padding: 28px 40px;
+      max-width: 820px;
+      background: #fdf7fa;
+      border: 1px solid #e9dbe7;
+      border-radius: 20px;
+    }
+
+    .info-section h2 {
+      font-family: "Space Grotesk", system-ui, sans-serif;
+      font-size: 1.4rem;
+      margin-bottom: 8px;
+      letter-spacing: 1px;
+      color: #2b2629;
+    }
+
+    .info-section p {
+      font-size: 0.97rem;
+      color: #4f4651;
+      line-height: 1.6;
+      margin-bottom: 14px;
+    }
+
+    .contact-line {
+      margin-top: 8px;
+    }
+
     /* FOOTER */
     footer {
       margin-top: 16px;
@@ -286,9 +330,8 @@
   <div class="page">
     <!-- TOP NAV -->
     <nav class="top-nav">
-      <span>ABOUT</span>
-      <span>PORTFOLIO</span>
-      <span>CONTACT</span>
+      <a href="#about" class="nav-link">ABOUT</a>
+      <a href="#contact" class="nav-link">CONTACT</a>
     </nav>
 
     <!-- MAIN CARD -->
@@ -357,6 +400,32 @@
         </a>
       </div>
     </div>
+
+    <!-- ABOUT & CONTACT SECTIONS -->
+    <section id="about" class="info-section">
+      <h2>About</h2>
+      <p>
+        Pieces of Me is a personal experiment in transforming everyday memories into something
+        intimate, visual, and meaningful. Each mosaic portrait is built entirely from the user’s
+        own gallery images — turning fragments of lived experiences into a new whole.
+      </p>
+      <p>
+        Designed and developed by Ana Silvera, this project blends creative technology,
+        image processing, and thoughtful UI design to explore how digital tools can reshape
+        personal storytelling.
+      </p>
+    </section>
+
+    <section id="contact" class="info-section">
+      <h2>Contact</h2>
+      <p>
+        For questions, collaborations, or curiosity, feel free to reach out.
+        This space is always open to ideas and inspiration.
+      </p>
+      <p class="contact-line">
+        <strong>Email:</strong> anasilvera14@gmail.com
+      </p>
+    </section>
 
     <footer>
       © 2025 Pieces of Me — by Ana Silvera · created through fragments, light, and memory.
@@ -511,3 +580,4 @@
   </script>
 </body>
 </html>
+
