Update author name to Ana Lucia Silvera

--- a/public/mosaic_preview_v3.html
+++ b/public/mosaic_preview_v3.html
@@ -410,7 +410,7 @@
         own gallery images — turning fragments of lived experiences into a new whole.
       </p>
       <p>
-        Designed and developed by Ana Silvera, this project blends creative technology,
+        Designed and developed by Ana Lucia Silvera, this project blends creative technology,
         image processing, and thoughtful UI design to explore how digital tools can reshape
         personal storytelling.
       </p>
@@ -423,12 +423,12 @@
         This space is always open to ideas and inspiration.
       </p>
       <p class="contact-line">
-        <strong>Email:</strong> anasilvera14@gmail.com
+        <strong>Email:</strong> alsilvera@smu.edu
       </p>
     </section>
 
     <footer>
-      © 2025 Pieces of Me — by Ana Silvera · created through fragments, light, and memory.
+      © 2025 Pieces of Me — by Ana Lucia Silvera · created through fragments, light, and memory.
     </footer>
   </div>
 
